# analyse_curve_fns_usage_in_signal

./: .gitignore  README.md  curve25519-dalek-public-api.json  curve25519-dalek-public-api.md  extract_functions_with_graphs.py  extract_grey_nodes.py  generate_curve25519_graphs_parallel.py  pyproject.toml
curve25519-dalek_public_apis_graphs/: backend_cpuid_avx2_init_5.dot  backend_get_selected_backend_5.dot  backend_serial_curve_models_impl__ProjectivePoint__Identity_identity_5.dot  backend_serial_u64_field_impl__FieldElement51_as_bytes_5.dot  backend_serial_u64_field_impl__FieldElement51_pow2k_5.dot  backend_serial_u64_field_impl__FieldElement51_square2_5.dot  backend_serial_u64_field_impl__FieldElement51_square_5.dot  backend_serial_u64_scalar_impl__Scalar52_as_bytes_5.dot  backend_serial_u64_scalar_impl__Scalar52_as_montgomery_5.dot  backend_serial_u64_scalar_impl__Scalar52_from_bytes_5.dot  backend_serial_u64_scalar_impl__Scalar52_from_montgomery_5.dot  backend_serial_u64_scalar_impl__Scalar52_montgomery_reduce_5.dot  backend_serial_u64_scalar_impl__Scalar52_montgomery_square_5.dot  backend_serial_u64_scalar_impl__Scalar52_mul_internal_5.dot  backend_serial_u64_scalar_m_5.dot  backend_vartime_double_base_mul_5.dot  backend_vector_avx2_edwards_impl__ExtendedPoint__Identity_identity_5.dot  backend_vector_avx2_edwards_impl__ExtendedPoint_double_5.dot  backend_vector_avx2_edwards_impl__`NafLookupTable5<CachedPoint>`__`From<&crate_EdwardsPoint>`_from_5.dot  backend_vector_avx2_field_impl__FieldElement2625x4_blend_5.dot  edwards_decompress_step_2_5.dot  (+42 more)
tests/: __init__.py  (+1 more)
(+195 files in other folders)
